--- a/templates/base.html
+++ b/templates/base.html
@@ -1,11 +1,45 @@
 <!DOCTYPE html>
+{% load static %}
+
 <html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="{% static 'bootstrap/css/bootstrap.min.css' %}">
     <title>Base template</title>
 </head>
 <body>
-    <h1> Helllo, I am the main template!</h1>
+    <nav>
+			<ul class="nav list-inline justify-content-end" style="background-color: gray">
+				<li class="nav-item">	
+					<a class="nav-link" href="#"> Home</a>
+				</li>
+				<li>
+					<a class="nav-link" href="#"> Services</a>
+				</li>
+					<li>
+						<a class="nav-link" href="#"> About US</a>
+					</li>
+					<div class="nav-dropdown">
+						<button class="btn btn-secondary dropdown-toggle" type="button" id="dropdownMenuButton1" data-bs-toggle="dropdown" aria-expanded="false">
+							Dropdown button
+						</button>
+						<ul class="dropdown-menu">
+							<li>
+								<a class="dropdown-item" href="">Profile</a>
+								<a class="dropdown-item" href="">Profile</a>
+								<a class="dropdown-item" href="">Profile</a>
+							</li>
+
+						</ul>
+					</div>
+			</ul>
+		</nav>
+		<h1> Iconos</h1>
+		<div class="container">
+	
+		</div>
+
+		<script src="{% static 'bootstrap/js/bootstrap.min.js' %}"></script>
 </body>
 </html>
