--- a/templates/base.html
+++ b/templates/base.html
@@ -1,13 +1,11 @@
 <!DOCTYPE html>
 {% load static %}
-<<<<<<< HEAD
-
-=======
->>>>>>> ff6f421b5cac93fb53ee2a37a410de21880bf809
 <html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+		<link href="{% static 'fontawesome_free/css/all.min.css' %}" rel="stylesheet" type="text/css">
+		<script src="{% static 'fontawesome_free/js/all.min.js' %}"></script>
     <link rel="stylesheet" href="{% static 'bootstrap/css/bootstrap.min.css' %}">
     <title>Base template</title>
 </head>
@@ -38,13 +36,12 @@
 					</div>
 			</ul>
 		</nav>
-<<<<<<< HEAD
-		<h1> Iconos</h1>
 		<div class="container">
-	
+			<h1 class="text-center py-5"> Usuario: </h1>
+			<i class="fas fa-user-circle"></i>
+			<i class="fas fa-unlock-alt"></i>
+			<i class="fas fa-unlock-alt"></i>
 		</div>
-=======
->>>>>>> ff6f421b5cac93fb53ee2a37a410de21880bf809
 
 		<script src="{% static 'bootstrap/js/bootstrap.min.js' %}"></script>
 </body>
