se corrigio el diseño de la barra de navegacion

--- a/templates/base.html
+++ b/templates/base.html
@@ -6,43 +6,51 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 		<link href="{% static 'fontawesome_free/css/all.min.css' %}" rel="stylesheet" type="text/css">
 		<script src="{% static 'fontawesome_free/js/all.min.js' %}"></script>
+		<script src="{% static 'bootstrap/js/bootstrap.bundle.js' %}"></script>
     <link rel="stylesheet" href="{% static 'bootstrap/css/bootstrap.min.css' %}">
+		<script src="{% static 'bootstrap/js/bootstrap.min.js' %}"></script>
+		
+
     <title>Base template</title>
 </head>
 <body>
-    <nav>
-			<ul class="nav list-inline justify-content-end" style="background-color: gray">
-				<li class="nav-item">	
-					<a class="nav-link" href="#"> Home</a>
-				</li>
-				<li>
-					<a class="nav-link" href="#"> Services</a>
-				</li>
-					<li>
-						<a class="nav-link" href="#"> About US</a>
+    <nav class="navbar navbar-expand-lg bg-light">
+			<a class="navbar-brand" href="#"> Logo</a>
+			<button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+				<span class="navbar-toggler-icon"></span>
+			</button>
+			<div class="collapse navbar-collapse justify-content-end" id="navbarSupportedContent">
+				<ul class="navbar-nav mr-auto">
+					<li class="nav-item active">
+						<a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
 					</li>
-					<div class="nav-dropdown">
-						<button class="btn btn-secondary dropdown-toggle" type="button" id="dropdownMenuButton1" data-bs-toggle="dropdown" aria-expanded="false">
-							Dropdown button
-						</button>
-						<ul class="dropdown-menu">
-							<li>
-								<a class="dropdown-item" href="">Profile</a>
-								<a class="dropdown-item" href="">Profile</a>
-								<a class="dropdown-item" href="">Profile</a>
-							</li>
+					<li class="nav-item active">
+						<a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
+					</li>
+					<li class="navbar-item">
+						<a class="nav-link" href="#">Link</a>
+					</li>
+					<li class="nav-item dropdown">
+						<a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+							<i class="fas fa-user-circle"></i>
+						</a>
+						<div class="dropdown-menu" aria-labelledby="navbarDropdown">
+							<a class="dropdown-item" href="#">Action</a>
+							<a class="dropdown-item" href="#">Another action</a>
+							<div class="dropdown-divider"></div>
+							<a class="dropdown-item" href="#">Something else here</a>
+						</div>
+					</li>
+				</ul>
+			</div>
 
-						</ul>
-					</div>
-			</ul>
 		</nav>
 		<div class="container">
 			<h1 class="text-center py-5"> Usuario: </h1>
-			<i class="fas fa-user-circle"></i>
 			<i class="fas fa-unlock-alt"></i>
 			<i class="fas fa-unlock-alt"></i>
 		</div>
 
-		<script src="{% static 'bootstrap/js/bootstrap.min.js' %}"></script>
+	
 </body>
 </html>
