--- a/templates/base.html
+++ b/templates/base.html
@@ -4,24 +4,24 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+		<link rel="shortcut icon" href="{% static 'images/logo.png' %}" type="image/x-icon">
 		<link href="{% static 'fontawesome_free/css/all.min.css' %}" rel="stylesheet" type="text/css">
 		<script src="{% static 'fontawesome_free/js/all.min.js' %}"></script>
     <link rel="stylesheet" href="{% static 'bootstrap/css/bootstrap.min.css' %}">
 		<link rel="stylesheet" href="{% static 'styles/navbar.css' %}">
-    <title>Base template</title>
+    <title>Hollow Clients System</title>
 		
 </head>
 <body>
-	<div class="container-fluid">
-		<nav class="navbar navbar-expand-lg navbar-light bg-light">
-			<a class="navbar-brand" href="#"> <img src="{% static 'images/logo.png' %}" width="30" height="30" alt="logo.png"> HollowClient </a>
+		<nav class="navbar nav-fill w-100 navbar-expand-lg navbar-light bg-light">
+			<a class="navbar-brand" href="{% url 'home' %}"> <img src="{% static 'images/logo.png' %}" width="30" height="30" alt="logo.png"> Hollow Clients </a>
 			<button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
 				<span class="navbar-toggler-icon"></span>
 			</button>
 			<div class="collapse navbar-collapse justify-content-end" id="navbarSupportedContent">
 				<ul class="navbar-nav mr-auto">
 					<li class="nav-item active">
-						<a class="nav-link" href="#"><i class="fas fa-home fa-2x"></i></span></a>
+						<a class="nav-link" href="{% url 'home' %}"><i class="fas fa-home fa-2x"></i></span></a>
 					</li>
 					<li class="navbar-item">
 						<a class="nav-link" href="#">Servicios</a>
@@ -34,8 +34,8 @@
 							<i class="fas fa-user-circle fa-2x"></i>
 						</a>
 						<div class="dropdown-menu" aria-labelledby="navbarDropdown">
-							<a class="dropdown-item" href="#">Action</a>
-							<a class="dropdown-item" href="#">Another action</a>
+							<a class="dropdown-item" href="#">Iniciar sesión</a>
+							<a class="dropdown-item" href="#">Registrarse</a>
 							<div class="dropdown-divider"></div>
 							<a class="dropdown-item" href="#">Something else here</a>
 						</div>
@@ -44,7 +44,6 @@
 			</div>
 
 		</nav>
-	</div>
 
 	<script src="{% static 'bootstrap/js/bootstrap.bundle.min.js' %}"></script>
 </body>
