--- a/templates/base.html
+++ b/templates/base.html
@@ -9,11 +9,12 @@
 		<script src="{% static 'fontawesome_free/js/all.min.js' %}"></script>
     <link rel="stylesheet" href="{% static 'bootstrap/css/bootstrap.min.css' %}">
 		<link rel="stylesheet" href="{% static 'styles/navbar.css' %}">
+		<link rel="stylesheet" href="{% static 'styles/footer.css' %}">
     <title>Hollow Clients System</title>
 		
 </head>
 <body>
-		<nav class="navbar nav-fill w-100 navbar-expand-lg navbar-light bg-light">
+		<nav class="navbar nav-fill w-100 navbar-expand-lg" style="background-color: #3b5998">
 			<a class="navbar-brand" href="{% url 'home' %}"> <img src="{% static 'images/logo.png' %}" width="30" height="30" alt="logo.png"> Hollow Clients </a>
 			<button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
 				<span class="navbar-toggler-icon"></span>
@@ -45,6 +46,160 @@
 
 		</nav>
 
+	<div class="container-fluid">
+		<div class="table-responsive py-5">
+			<table class="table table-bordered">
+				<thead>
+					<tr>
+						<th> id</th>
+						<th> name</th>
+						<th> perro</th>
+						<th> eche</th>
+						<th> eche</th>
+					</th>
+				</thead>
+				<tbody>
+					<tr>
+						<td>Monda</td>
+						<td>Monda</td>
+						<td>Monda</td>
+						<td>Monda</td>
+						<td>Monda</td>
+						
+					</tr>
+					<tr>
+						<td>Monda</td>
+						<td>Monda</td>
+						<td>Monda</td>
+						<td>Monda</td>
+						<td>Monda</td>
+						
+					</tr>
+					<tr>
+						<td>Monda</td>
+						<td>Monda</td>
+						<td>Monda</td>
+						<td>Monda</td>
+						<td>Monda</td>
+						
+					</tr>
+					<tr>
+						<td>Monda</td>
+						<td>Monda</td>
+						<td>Monda</td>
+						<td>Monda</td>
+						<td>Monda</td>
+						
+					</tr>
+				</tbody>
+			</table>	
+		</div>
+
+	</div>
+	<div class="container-fluid py-5">
+		<div class="table-responsive py-5">
+			<table class="table table-bordered">
+				<thead>
+					<tr>
+						<th> id</th>
+						<th> name</th>
+						<th> perro</th>
+						<th> eche</th>
+						<th> eche</th>
+					</th>
+				</thead>
+				<tbody>
+					<tr>
+						<td>Monda</td>
+						<td>Monda</td>
+						<td>Monda</td>
+						<td>Monda</td>
+						<td>Monda</td>
+						
+					</tr>
+					<tr>
+						<td>Monda</td>
+						<td>Monda</td>
+						<td>Monda</td>
+						<td>Monda</td>
+						<td>Monda</td>
+						
+					</tr>
+					<tr>
+						<td>Monda</td>
+						<td>Monda</td>
+						<td>Monda</td>
+						<td>Monda</td>
+						<td>Monda</td>
+						
+					</tr>
+					<tr>
+						<td>Monda</td>
+						<td>Monda</td>
+						<td>Monda</td>
+						<td>Monda</td>
+						<td>Monda</td>
+						
+					</tr>
+				</tbody>
+			</table>	
+		</div>
+
+	</div>
+	
+	
+  <footer class="text-center text-lg-start text-white" style="background-color: #3b5998">
+    <div class="container p-4 pb-0" style="background-color: #3b5998">
+      <section class="">
+        <div class="row">
+          <div class="col-md-3 col-lg-3 col-xl-3 mx-auto mt-3" style="background-color: #3b5998" >
+            <h6 class="text-uppercase mb-4 font-weight-bold">
+              Hollow Client System
+            </h6>
+            <p>
+              Here you can use rows and columns to organize your footer
+              content. Lorem ipsum dolor sit amet, consectetur adipisicing
+              elit.
+            </p>
+          </div>
+          <hr class="w-100 clearfix d-md-none" />
+          <div class="col-md-2 col-lg-2 col-xl-2 mx-auto mt-3">
+            <h6 class="text-uppercase mb-4 font-weight-bold">Productos</h6>
+            <p>
+              <a class="text-white">MDBootstrap</a>
+            </p>
+            <p>
+              <a class="text-white">MDWordPress</a>
+            </p>
+            <p>
+              <a class="text-white">BrandFlow</a>
+            </p>
+            <p>
+              <a class="text-white">Bootstrap Angular</a>
+            </p>
+          </div>
+          <hr class="w-100 clearfix d-md-none" />
+          <hr class="w-100 clearfix d-md-none" />
+          <div class="col-md-4 col-lg-3 col-xl-3 mx-auto mt-3">
+            <h6 class="text-uppercase mb-4 font-weight-bold">Contacto</h6>
+            <p><i class="fas fa-home mr-3"></i> Barranquilla, Atlántico, CO</p>
+            <p><i class="fas fa-envelope mr-3"></i> andresfsilvera0109@gmail.com</p>
+            <p><i class="fas fa-phone mr-3"></i> + 01 234 567 88</p>
+            <p><i class="fas fa-print mr-3"></i> + 01 234 567 89</p>
+          </div>
+          <div class="col-md-3 col-lg-2 col-xl-2 mx-auto mt-3">
+            <h6 class="text-uppercase mb-4 font-weight-bold">Siguenos</h6>
+            <a class="btn btn-primary btn-floating m-1" style="background-color: #0082ca" href="#! role="button"><i class="fab fa-linkedin-in"></i></a>
+            <a class="btn btn-primary btn-floating m-1" style="background-color: #333333" href="#!" role="button"><i class="fab fa-github"></i></a>
+          </div>
+        </div>
+      </section>
+    </div>
+    <div class="text-center p-3" style="background-color: gray">
+      © 2024 Hollow clients System, Todos los derechos reservados.
+    </div>
+  </footer>
+ 
 	<script src="{% static 'bootstrap/js/bootstrap.bundle.min.js' %}"></script>
 </body>
 </html>
