--- a/static/apps/authentication/styles/navbar.css
+++ b/static/apps/authentication/styles/navbar.css
@@ -1,24 +1,34 @@
 .navbar .navbar-nav .nav-link {
   font-size: 1.1em;
+  color: white;
   
 }
 
 
-@media screen and (min-width: 992px) {
+@media screen and (min-width: 990px) {
   .navbar .navbar-nav .nav-link {
     padding: 0.5em;
   }
 
   .navbar .navbar-nav .nav-item:not(:last-child) {
-    border-right: 3px solid black;
+    border-right: 3px solid gray;
   }
 }
 
 
-.navbar-brand a {
-  padding: 10px;
+.nav-item a  {
+  margin-right: 33px;
+
 }
 
+
+.navbar-brand img {
+  margin-left: 7px;
+}
+
+.collapse {
+  margin-left: 0px;
+}
 
 * {
     margin: 0px;
