--- a/static/apps/authentication/styles/navbar.css
+++ b/static/apps/authentication/styles/navbar.css
@@ -1,33 +1,17 @@
-.navbar .navbar-nav .nav-link {
-  font-size: 1.1em;
-  color: white;
-  
+.navbar {
+
+  background-color:#bebfdd;
 }
 
-
-@media screen and (min-width: 990px) {
-  .navbar .navbar-nav .nav-link {
-    padding: 0.5em;
-  }
-
-  .navbar .navbar-nav .nav-item:not(:last-child) {
-    border-right: 3px solid gray;
-  }
-}
-
-
-.nav-item a  {
-  margin-right: 33px;
-
-}
 
 
 .navbar-brand img {
   margin-left: 7px;
 }
 
-.collapse {
-  margin-left: 0px;
+
+.nav-item .nav-link li {
+  justify-content: center;
 }
 
 * {
