--- a/templates/base.html
+++ b/templates/base.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-		<link rel="shortcut icon" href="{% static 'images/favicon.png' %}" type="image/x-icon">
+		<link rel="shortcut icon" href="{% static 'images/logo.png' %}" type="image/x-icon">
 		<link href="{% static 'fontawesome_free/css/all.min.css' %}" rel="stylesheet" type="text/css">
 		<script src="{% static 'fontawesome_free/js/all.min.js' %}"></script>
     <link rel="stylesheet" href="{% static 'bootstrap/css/bootstrap.min.css' %}" type="text/css">
@@ -14,40 +14,41 @@
 		
 </head>
 <body>
-		<nav class="navbar nav-fill w-100 navbar-expand-lg" style="background-color: #3b5998;">
-			<a class="navbar-brand" href="{% url 'home' %}"> <img src="{% static 'images/favicon.png' %}" width="30" height="30" alt="logo.png"> Hollow Clients </a>
+	<nav class="navbar navbar-expand-lg justify-content-end">
+		<div class="container-fluid">
+			<a class="navbar-brand" href="{% url 'home' %}"><img src="{% static 'images/logo.png' %}" alt="logo.png" width="30" height="24"> Hollow Clients</a>
 			<button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
 				<span class="navbar-toggler-icon"></span>
 			</button>
 			<div class="collapse navbar-collapse justify-content-center" id="navbarSupportedContent">
-				<ul class="navbar-nav mr-auto">
+				<ul class="navbar-nav me-auto mb-2 mb-lg-0">
 					<li class="nav-item">
-						<a class="nav-link" href="{% url 'home' %}"><i class="fas fa-home fa-2x"></i></a>
+						<a class="nav-link active" aria-current="page" href="#">Inicio</i></i></a>
 					</li>
-					<li class="navbar-item">
+					<li class="nav-item">
+						<a class="nav-link" href="#">Productos</a>
+					</li>
+					<li class="nav-item">
 						<a class="nav-link" href="#">Servicios</a>
 					</li>
-					<li class="navbar-item">
+					<li class="nav-item">
 						<a class="nav-link" href="#">Sobre nosotros</a>
 					</li>
-					<li class="navbar-item">
-						<a class="nav-link" href="#">Tienda</a>
-					</li>
 					<li class="nav-item dropdown">
-						<a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-							<i class="fas fa-user-circle fa-2x"></i>
+						<a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+							<i class="far fa-user-circle fa-2x"></i>
 						</a>
-						<div class="dropdown-menu" aria-labelledby="navbarDropdown">
-							<a class="dropdown-item" href="#">Iniciar sesión</a>
-							<a class="dropdown-item" href="#">Registrarse</a>
-							<div class="dropdown-divider"></div>
-							<a class="dropdown-item" href="#">Something else here</a>
-						</div>
+						<ul class="dropdown-menu" aria-labelledby="navbarDropdown">
+							<li><a class="dropdown-item" href="#">Iniciar sesión</a></li>
+							<li><a class="dropdown-item" href="#">Registrarse</a></li>
+							<li><hr class="dropdown-divider"></li>
+							<li><a class="dropdown-item" href="#">Ingresar como Administrador</a></li>
+						</ul>
 					</li>
 				</ul>
 			</div>
-
-		</nav>
+		</div>
+	</nav>
 
 	<div class="container-fluid">
 		<div class="table-responsive py-5">
@@ -250,7 +251,7 @@
 
 	</div>
 	
-		<footer class="text-center text-lg-start text-white" style="background-color: #3b5998">
+		<footer class="text-center text-lg-start text-white" style="background-color: #121a33">
 			<div class="container p-4 pb-0">
 				<section class="">
 					<div class="row">
@@ -296,8 +297,8 @@
 					</div>
 				</section>
 			</div>
-			<div class="text-center p-3" style="background-color: gray">
-				© 2024 Hollow clients System, Todos los derechos reservados.
+			<div class="text-center p-3" style="background-color: #6a6785">
+				© 2024 Hollow Clients System, Todos los derechos reservados.
 			</div>
 		</footer>
   
