--- a/templates/base.html
+++ b/templates/base.html
@@ -14,16 +14,19 @@
 		
 </head>
 <body>
-	<nav class="navbar navbar-expand-lg justify-content-end">
+	<nav class="navbar navbar-expand-lg">
 		<div class="container-fluid">
 			<a class="navbar-brand" href="{% url 'home' %}"><img src="{% static 'images/logo.png' %}" alt="logo.png" width="30" height="24"> Hollow Clients</a>
 			<button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
 				<span class="navbar-toggler-icon"></span>
 			</button>
-			<div class="collapse navbar-collapse justify-content-center" id="navbarSupportedContent">
-				<ul class="navbar-nav me-auto mb-2 mb-lg-0">
+			<div class="collapse navbar-collapse justify-content-end" id="navbarSupportedContent">
+				<ul class="navbar-nav">
 					<li class="nav-item">
-						<a class="nav-link active" aria-current="page" href="#">Inicio</i></i></a>
+						<a class="nav-link" aria-current="page" href="#">Inicio</i></i></a>
+					</li>
+					<li class="nav-item">
+						<a class="nav-link" href="#">Productos</a>
 					</li>
 					<li class="nav-item">
 						<a class="nav-link" href="#">Productos</a>
@@ -38,7 +41,7 @@
 						<a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
 							<i class="far fa-user-circle fa-2x"></i>
 						</a>
-						<ul class="dropdown-menu" aria-labelledby="navbarDropdown">
+						<ul class="dropdown-menu dropdown-menu-end" aria-labelledby="navbarDropdown">
 							<li><a class="dropdown-item" href="#">Iniciar sesión</a></li>
 							<li><a class="dropdown-item" href="#">Registrarse</a></li>
 							<li><hr class="dropdown-divider"></li>
@@ -50,205 +53,46 @@
 		</div>
 	</nav>
 
-	<div class="container-fluid">
-		<div class="table-responsive py-5">
-			<table class="table table-bordered">
-				<thead>
-					<tr>
-						<th> id</th>
-						<th> name</th>
-						<th> perro</th>
-						<th> eche</th>
-						<th> eche</th>
-					</th>
-				</thead>
-				<tbody>
-					<tr>
-						<td>Monda</td>
-						<td>Monda</td>
-						<td>Monda</td>
-						<td>Monda</td>
-						<td>Monda</td>
-						
-					</tr>
-					<tr>
-						<td>Monda</td>
-						<td>Monda</td>
-						<td>Monda</td>
-						<td>Monda</td>
-						<td>Monda</td>
-						
-					</tr>
-					<tr>
-						<td>Monda</td>
-						<td>Monda</td>
-						<td>Monda</td>
-						<td>Monda</td>
-						<td>Monda</td>
-						
-					</tr>
-					<tr>
-						<td>Monda</td>
-						<td>Monda</td>
-						<td>Monda</td>
-						<td>Monda</td>
-						<td>Monda</td>
-						
-					</tr>
-				</tbody>
-			</table>	
-		</div>
 
-	</div>
-	<div class="container-fluid py-5">
-		<div class="table-responsive py-5">
-			<table class="table table-bordered">
-				<thead>
-					<tr>
-						<th> id</th>
-						<th> name</th>
-						<th> perro</th>
-						<th> eche</th>
-						<th> eche</th>
-					</th>
-				</thead>
-				<tbody>
-					<tr>
-						<td>Monda</td>
-						<td>Monda</td>
-						<td>Monda</td>
-						<td>Monda</td>
-						<td>Monda</td>
-						
-					</tr>
-					<tr>
-						<td>Monda</td>
-						<td>Monda</td>
-						<td>Monda</td>
-						<td>Monda</td>
-						<td>Monda</td>
-						
-					</tr>
-					<tr>
-						<td>Monda</td>
-						<td>Monda</td>
-						<td>Monda</td>
-						<td>Monda</td>
-						<td>Monda</td>
-						
-					</tr>
-					<tr>
-						<td>Monda</td>
-						<td>Monda</td>
-						<td>Monda</td>
-						<td>Monda</td>
-						<td>Monda</td>
-						
-					</tr>
-				</tbody>
-			</table>	
+	<div class="container py-4">
+		<div id="carouselExampleCaptions" class="carousel carousel-dark slide" data-bs-ride="carousel">
+			<div class="carousel-indicators">
+				<button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
+				<button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="1" aria-label="Slide 2"></button>
+				<button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="2" aria-label="Slide 3"></button>
+			</div>
+			<div class="carousel-inner">
+				<div class="carousel-item active">
+					<img src="{% static 'apps/authentication/images/carousel_one.jpg' %}" class="d-block w-100" alt="carousel_two.jpg">
+					<div class="carousel-caption d-none d-md-block">
+						<h5>Gestion y Administacion</h5>
+						<p>Some representative placeholder content for the first slide.</p>
+					</div>
+				</div>
+				<div class="carousel-item">
+					<img src="{% static 'apps/authentication/images/carousel_two.jpg' %}" class="d-block w-100" alt="...">
+					<div class="carousel-caption d-none d-md-block">
+						<h5>Second slide label</h5>
+						<p>Some representative placeholder content for the second slide.</p>
+					</div>
+				</div>
+				<div class="carousel-item">
+					<img src="{% static 'apps/authentication/images/carousel_three.png' %}" class="d-block w-100" alt="...">
+					<div class="carousel-caption d-none d-md-block">
+						<h5>Third slide label</h5>
+						<p>Some representative placeholder content for the third slide.</p>
+					</div>
+				</div>
+			</div>
+			<button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide="prev">
+				<span class="carousel-control-prev-icon" aria-hidden="true"></span>
+				<span class="visually-hidden">Previous</span>
+			</button>
+			<button class="carousel-control-next" type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide="next">
+				<span class="carousel-control-next-icon" aria-hidden="true"></span>
+				<span class="visually-hidden">Next</span>
+			</button>
 		</div>
-
-	</div>
-	<div class="container-fluid">
-		<div class="table-responsive py-5">
-			<table class="table table-bordered">
-				<thead>
-					<tr>
-						<th> id</th>
-						<th> name</th>
-						<th> perro</th>
-						<th> eche</th>
-						<th> eche</th>
-					</th>
-				</thead>
-				<tbody>
-					<tr>
-						<td>Monda</td>
-						<td>Monda</td>
-						<td>Monda</td>
-						<td>Monda</td>
-						<td>Monda</td>
-						
-					</tr>
-					<tr>
-						<td>Monda</td>
-						<td>Monda</td>
-						<td>Monda</td>
-						<td>Monda</td>
-						<td>Monda</td>
-						
-					</tr>
-					<tr>
-						<td>Monda</td>
-						<td>Monda</td>
-						<td>Monda</td>
-						<td>Monda</td>
-						<td>Monda</td>
-						
-					</tr>
-					<tr>
-						<td>Monda</td>
-						<td>Monda</td>
-						<td>Monda</td>
-						<td>Monda</td>
-						<td>Monda</td>
-						
-					</tr>
-				</tbody>
-			</table>	
-		</div>
-
-	</div>
-	<div class="container-fluid py-5">
-		<div class="table-responsive py-5">
-			<table class="table table-bordered">
-				<thead>
-					<tr>
-						<th> id</th>
-						<th> name</th>
-						<th> perro</th>
-						<th> eche</th>
-						<th> eche</th>
-					</th>
-				</thead>
-				<tbody>
-					<tr>
-						<td>Monda</td>
-						<td>Monda</td>
-						<td>Monda</td>
-						<td>Monda</td>
-						<td>Monda</td>
-						
-					</tr>
-					<tr>
-						<td>Monda</td>
-						<td>Monda</td>
-						<td>Monda</td>
-						<td>Monda</td>
-						<td>Monda</td>
-						
-					</tr>
-					<tr>
-						<td>Monda</td>
-						<td>Monda</td>
-						<td>Monda</td>
-						<td>Monda</td>
-						<td>Monda</td>
-						
-					</tr>
-					<tr>
-						<td>Monda</td>
-						<td>Monda</td>
-						<td>Monda</td>
-						<td>Monda</td>
-						<td>Monda</td>
-						
-					</tr>
-				</tbody>
-			</table>	
-		</div>
-
 	</div>
 	
 		<footer class="text-center text-lg-start text-white" style="background-color: #121a33">
