--- a/templates/base.html
+++ b/templates/base.html
@@ -10,13 +10,13 @@
     <link rel="stylesheet" href="{% static 'bootstrap/css/bootstrap.min.css' %}" type="text/css">
 		<link rel="stylesheet" type="text/css" href="{% static 'apps/authentication/styles/navbar.css' %}">
 		<link rel="stylesheet" type="text/css" href="{% static 'apps/authentication/styles/footer.css' %}">
-    <title>Hollow Clients System</title>
+    <title>Hollow Customers System</title>
 		
 </head>
 <body>
 	<nav class="navbar navbar-expand-lg">
 		<div class="container-fluid">
-			<a class="navbar-brand" href="{% url 'home' %}"><img src="{% static 'images/logo.png' %}" alt="logo.png" width="30" height="24"> Hollow Clients</a>
+			<a class="navbar-brand" href="{% url 'home' %}"><img src="{% static 'images/logo.png' %}" alt="logo.png" width="30" height="24"> Hollow Customers</a>
 			<button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
 				<span class="navbar-toggler-icon"></span>
 			</button>
@@ -39,7 +39,7 @@
 					</li>
 					<li class="nav-item dropdown">
 						<a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-							<i class="far fa-user-circle fa-2x"></i>
+							<i class="far fa-user"></i>
 						</a>
 						<ul class="dropdown-menu dropdown-menu-end" aria-labelledby="navbarDropdown">
 							<li><a class="dropdown-item" href="#">Iniciar sesión</a></li>
@@ -141,7 +141,7 @@
 					</div>
 				</section>
 			</div>
-			<div class="text-center p-3" style="background-color: #6a6785">
+			<div class="text-center p-3" style="background-color: #5c5470">
 				© 2024 Hollow Clients System, Todos los derechos reservados.
 			</div>
 		</footer>
