--- a/templates/base.html
+++ b/templates/base.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 {% load static %}
-<html lang="en">
+<html lang="es">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -45,14 +45,13 @@
 							<li><a class="dropdown-item" href="#">Iniciar sesión</a></li>
 							<li><a class="dropdown-item" href="#">Registrarse</a></li>
 							<li><hr class="dropdown-divider"></li>
-							<li><a class="dropdown-item" href="#">Ingresar como Administrador</a></li>
+							<li><a class="dropdown-item" href="#"><i class="fas fa-users-cog"></i> Ingresar como Administrador</a></li>
 						</ul>
 					</li>
 				</ul>
 			</div>
 		</div>
 	</nav>
-
 
 	<div class="container py-4">
 		<div id="carouselExampleCaptions" class="carousel carousel-dark slide" data-bs-ride="carousel">
@@ -63,24 +62,24 @@
 			</div>
 			<div class="carousel-inner">
 				<div class="carousel-item active">
-					<img src="{% static 'apps/authentication/images/carousel_one.jpg' %}" class="d-block w-100" alt="carousel_two.jpg">
+					<img src="{% static 'apps/authentication/images/carousel_one.jpg' %}" class="d-block w-100" alt="carousel_one.jpg">
 					<div class="carousel-caption d-none d-md-block">
-						<h5>Gestion y Administacion</h5>
-						<p>Some representative placeholder content for the first slide.</p>
+						<h5>Gestión y Administración</h5>
+						<p>Permite poder llevar a cabo un control adecuado de la información del cliente.</p>
 					</div>
 				</div>
 				<div class="carousel-item">
-					<img src="{% static 'apps/authentication/images/carousel_two.jpg' %}" class="d-block w-100" alt="...">
+					<img src="{% static 'apps/authentication/images/carousel_two.jpg' %}" class="d-block w-100" alt="carousel_two.jpg">
 					<div class="carousel-caption d-none d-md-block">
-						<h5>Second slide label</h5>
-						<p>Some representative placeholder content for the second slide.</p>
+						<h5>Automatiza procesos</h5>
+						<p>Automatiza tareas evitando cargas repetitivas lo que hace que aumente la productividad del cliente.</p>
 					</div>
 				</div>
 				<div class="carousel-item">
-					<img src="{% static 'apps/authentication/images/carousel_three.png' %}" class="d-block w-100" alt="...">
+					<img src="{% static 'apps/authentication/images/carousel_three.jpg' %}" class="d-block w-100" alt="carousel_three.jpg">
 					<div class="carousel-caption d-none d-md-block">
-						<h5>Third slide label</h5>
-						<p>Some representative placeholder content for the third slide.</p>
+						<h5>Mejora las relaciones con la empresa</h5>
+						<p>La empresa y sus clientes mantienen una estrecha elación  de las diferentes actividades.</p>
 					</div>
 				</div>
 			</div>
@@ -101,28 +100,26 @@
 					<div class="row">
 						<div class="col-md-3 col-lg-3 col-xl-3 mx-auto mt-3">
 							<h6 class="text-uppercase mb-4 font-weight-bold">
-								Hollow Client System
+								Hollow Customers System
 							</h6>
-							<p>
-								Here you can use rows and columns to organize your footer
-								content. Lorem ipsum dolor sit amet, consectetur adipisicing
-								elit.
+							<p class="text-white" style="text-align: justify;">
+								Hollow Customers System es una aplicación que permite gestionar, administrar y mejorar las relaciones entre la empresa y sus clientes, esta aplicación permite almacenar, organizar y acceder a la información relevante de los clientes.
 							</p>
 						</div>
 						<hr class="w-100 clearfix d-md-none" />
 						<div class="col-md-2 col-lg-2 col-xl-2 mx-auto mt-3">
-							<h6 class="text-uppercase mb-4 font-weight-bold">Productos</h6>
-							<p>
-								<a class="text-white">MDBootstrap</a>
+							<h6 class="text-uppercase mb-4 font-weight-bold">Productos y Servicios</h6>
+							<p class="text-white">
+								Atención al cliente
 							</p>
-							<p>
-								<a class="text-white">MDWordPress</a>
+							<p class="text-white">
+								Gestión de productos
 							</p>
-							<p>
-								<a class="text-white">BrandFlow</a>
+							<p class="text-white">
+								Tasks
 							</p>
-							<p>
-								<a class="text-white">Bootstrap Angular</a>
+							<p class="text-white">
+								Control de inventario
 							</p>
 						</div>
 						<hr class="w-100 clearfix d-md-none" />
