se agrego las diferentes descripciones e imagenes de los servicios por medio de cards

--- a/templates/base.html
+++ b/templates/base.html
@@ -26,13 +26,7 @@
 						<a class="nav-link" aria-current="page" href="#">Inicio</i></i></a>
 					</li>
 					<li class="nav-item">
-						<a class="nav-link" href="#">Productos</a>
-					</li>
-					<li class="nav-item">
-						<a class="nav-link" href="#">Productos</a>
-					</li>
-					<li class="nav-item">
-						<a class="nav-link" href="#">Servicios</a>
+						<a class="nav-link" href="#services">Servicios</a>
 					</li>
 					<li class="nav-item">
 						<a class="nav-link" href="#">Sobre nosotros</a>
@@ -93,6 +87,78 @@
 			</button>
 		</div>
 	</div>
+
+	<div class="container py-4" id="services">
+		<div class="row">
+			<div class="col-sm-6 py-3">
+				<div class="card mb-3" style="max-width: 540px;">
+					<div class="row g-0">
+						<div class="col-md-4">
+							<img src="{% static 'apps/authentication/images/customer_service.jpg' %}" class="img-fluid rounded-start" alt="customer_service.jpg">
+						</div>
+						<div class="col-md-8">
+							<div class="card-header">
+								Atención al cliente
+							</div>
+							<div class="card-body">
+								<p class="card-text">Brindamos un sistema de atención al cliente en la que se resolverá las problematicas que tengan los clientes, buscamos satisfacer sus principales necesidades.</p>
+							</div>
+						</div>
+					</div>
+				</div>
+			</div>
+			<div class="col-sm-6 py-3">
+				<div class="card mb-3" style="max-width: 540px;">
+					<div class="row g-0">
+						<div class="col-md-4">
+							<img src="{% static 'apps/authentication/images/products.jpg' %}" class="img-fluid rounded-start" alt="products.jpg">
+						</div>
+						<div class="col-md-8">
+							<div class="card-header">
+								Gestión de productos
+							</div>
+							<div class="card-body">
+								<p class="card-text">Los clientes podrán gestionar los productos adquiridos de la empresa por medio de carritos de compras y hacer su respectivo seguimiento a dichos productos.</p>
+							</div>
+						</div>
+					</div>
+				</div>
+			</div><div class="col-sm-6 py-3">
+				<div class="card mb-3" style="max-width: 540px;">
+					<div class="row g-0">
+						<div class="col-md-4">
+							<img src="{% static 'apps/authentication/images/tasks.jpg' %}" class="img-fluid rounded-start" alt="tasks.jpg">
+						</div>
+						<div class="col-md-8">
+							<div class="card-header">
+								Asignación de Tasks
+							</div>
+							<div class="card-body">
+								<p class="card-text">Los clientes o la empresa podrán llevar a cabo diferentes asignaciones de tareas en la que se pretende llevar un control de las diferentes actividades.</p>
+							</div>
+						</div>
+					</div>
+				</div>
+			</div><div class="col-sm-6 py-3">
+				<div class="card mb-3" style="max-width: 540px;">
+					<div class="row g-0">
+						<div class="col-md-4">
+							<img src="{% static 'apps/authentication/images/inventory_control.jpg' %}" class="img-fluid rounded-start" alt="inventory_control.jpg">
+						</div>
+						<div class="col-md-8">
+							<div class="card-header">
+								Control de inventario
+							</div>
+							<div class="card-body">
+								<p class="card-text">El control de inventario permite a la empresa gestionar las existencias que almacena, abarca el registro de todos aquellos movimientos de almacenamiento de materia prima.</p>
+							</div>
+						</div>
+					</div>
+				</div>
+			</div>
+		</div>
+	</div>
+	
 	
 		<footer class="text-center text-lg-start text-white" style="background-color: #121a33">
 			<div class="container p-4 pb-0">
