--- a/templates/base.html
+++ b/templates/base.html
@@ -23,7 +23,7 @@
 			<div class="collapse navbar-collapse justify-content-end" id="navbarSupportedContent">
 				<ul class="navbar-nav">
 					<li class="nav-item">
-						<a class="nav-link" aria-current="page" href="#">Inicio</i></i></a>
+						<a class="nav-link" aria-current="page" href="{% url 'home' %}">Inicio</i></i></a>
 					</li>
 					<li class="nav-item">
 						<a class="nav-link" href="#services">Servicios</a>
@@ -36,8 +36,8 @@
 							<i class="far fa-user"></i>
 						</a>
 						<ul class="dropdown-menu dropdown-menu-end" aria-labelledby="navbarDropdown">
-							<li><a class="dropdown-item" href="#">Iniciar sesión</a></li>
-							<li><a class="dropdown-item" href="#">Registrarse</a></li>
+							<li><a class="dropdown-item" href="{% url 'login' %}">Iniciar sesión</a></li>
+							<li><a class="dropdown-item" href="{% url 'register' %}">Registrarse</a></li>
 							<li><hr class="dropdown-divider"></li>
 							<li><a class="dropdown-item" href="#"><i class="fas fa-users-cog"></i> Ingresar como Administrador</a></li>
 						</ul>
