se movio la carpeta static al directorio interno de la app authentication

--- a/templates/base.html
+++ b/templates/base.html
@@ -8,8 +8,8 @@
 		<link href="{% static 'fontawesome_free/css/all.min.css' %}" rel="stylesheet" type="text/css">
 		<script src="{% static 'fontawesome_free/js/all.min.js' %}"></script>
     <link rel="stylesheet" href="{% static 'bootstrap/css/bootstrap.min.css' %}" type="text/css">
-		<link rel="stylesheet" type="text/css" href="{% static 'apps/authentication/styles/navbar.css' %}">
-		<link rel="stylesheet" type="text/css" href="{% static 'apps/authentication/styles/footer.css' %}">
+		<link rel="stylesheet" type="text/css" href="{% static 'styles/navbar.css' %}">
+		<link rel="stylesheet" type="text/css" href="{% static 'styles/footer.css' %}">
     <title>Hollow Customers System</title>
 		
 </head>
@@ -56,21 +56,21 @@
 			</div>
 			<div class="carousel-inner">
 				<div class="carousel-item active">
-					<img src="{% static 'apps/authentication/images/carousel_one.jpg' %}" class="d-block w-100" alt="carousel_one.jpg">
+					<img src="{% static 'images/carousel_one.jpg' %}" class="d-block w-100" alt="carousel_one.jpg">
 					<div class="carousel-caption d-none d-md-block">
 						<h5>Gestión y Administración</h5>
 						<p class="lead">Permite poder llevar a cabo un control adecuado de la información del cliente.</p>
 					</div>
 				</div>
 				<div class="carousel-item">
-					<img src="{% static 'apps/authentication/images/carousel_two.jpg' %}" class="d-block w-100" alt="carousel_two.jpg">
+					<img src="{% static 'images/carousel_two.jpg' %}" class="d-block w-100" alt="carousel_two.jpg">
 					<div class="carousel-caption d-none d-md-block">
 						<h5>Automatiza procesos</h5>
 						<p class="lead">Automatiza tareas evitando cargas repetitivas lo que hace que aumente la productividad del cliente.</p>
 					</div>
 				</div>
 				<div class="carousel-item">
-					<img src="{% static 'apps/authentication/images/carousel_three.jpg' %}" class="d-block w-100" alt="carousel_three.jpg">
+					<img src="{% static 'images/carousel_three.jpg' %}" class="d-block w-100" alt="carousel_three.jpg">
 					<div class="carousel-caption d-none d-md-block">
 						<h5>Mejora las relaciones con la empresa</h5>
 						<p class="lead">La empresa y sus clientes mantienen una estrecha elación  de las diferentes actividades.</p>
@@ -94,7 +94,7 @@
 				<div class="card mb-3" style="max-width: 540px;">
 					<div class="row g-0">
 						<div class="col-md-4">
-							<img src="{% static 'apps/authentication/images/customer_service.jpg' %}" class="img-fluid rounded-start" alt="customer_service.jpg">
+							<img src="{% static 'images/customer_service.jpg' %}" class="img-fluid rounded-start" alt="customer_service.jpg">
 						</div>
 						<div class="col-md-8">
 							<div class="card-header lead">
@@ -111,7 +111,7 @@
 				<div class="card mb-3" style="max-width: 540px;">
 					<div class="row g-0">
 						<div class="col-md-4">
-							<img src="{% static 'apps/authentication/images/products.jpg' %}" class="img-fluid rounded-start" alt="products.jpg">
+							<img src="{% static 'images/products.jpg' %}" class="img-fluid rounded-start" alt="products.jpg">
 						</div>
 						<div class="col-md-8">
 							<div class="card-header lead">
@@ -127,7 +127,7 @@
 				<div class="card mb-3" style="max-width: 540px;">
 					<div class="row g-0">
 						<div class="col-md-4">
-							<img src="{% static 'apps/authentication/images/tasks.jpg' %}" class="img-fluid rounded-start" alt="tasks.jpg">
+							<img src="{% static 'images/tasks.jpg' %}" class="img-fluid rounded-start" alt="tasks.jpg">
 						</div>
 						<div class="col-md-8">
 							<div class="card-header lead">
@@ -143,7 +143,7 @@
 				<div class="card mb-3" style="max-width: 540px;">
 					<div class="row g-0">
 						<div class="col-md-4">
-							<img src="{% static 'apps/authentication/images/inventory_control.jpg' %}" class="img-fluid rounded-start" alt="inventory_control.jpg">
+							<img src="{% static 'images/inventory_control.jpg' %}" class="img-fluid rounded-start" alt="inventory_control.jpg">
 						</div>
 						<div class="col-md-8">
 							<div class="card-header lead">
