se agrego el link del panel de administracion en el dropdown del navbar

--- a/templates/base.html
+++ b/templates/base.html
@@ -38,7 +38,7 @@
 									<li><a class="dropdown-item" href="{% url 'login' %}">Iniciar sesión</a></li>
 									<li><a class="dropdown-item" href="{% url 'register' %}">Registrarse</a></li>
 									<li><hr class="dropdown-divider"></li>
-									<li><a class="dropdown-item" href="#"><i class="fas fa-users-cog"></i> Ingresar como Administrador</a></li>
+									<li><a class="dropdown-item" href="{% url 'admin:index' %}"><i class="fas fa-users-cog"></i> Ingresar como Administrador</a></li>
 								</ul>
 							</li>
 						</ul>
