--- a/authentication/templates/login.html
+++ b/authentication/templates/login.html
@@ -1,11 +1,20 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Inicio de sesión</title>
-</head>
-<body>
+{% extends "base.html" %}
+
+{% load static %}
+
+{% block title%}Login{% endblock %}
+
+{% block extra_styles %}
+    <link rel="stylesheet" type="text/css" href="{% static 'styles/login.css'%}">
+{% endblock %}
+
+{% block content%}
+
+<div class="container d-flex min-vh-100 justify-content-center py-5">
+    <div class="form-login">
+        <h3 class="text-center lead">Hijo</h3>
+    </div>
     
-</body>
-</html>
+</div>
+
+{% endblock %}
