--- a/authentication/templates/register.html
+++ b/authentication/templates/register.html
@@ -1,11 +1,18 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Registro de usuario</title>
-</head>
-<body>
+{% extends "base.html" %}
+{% load static %}
+
+{% block title%}Registro de usuario{% endblock %}
+
+{% block extra_styles %}
+    <link rel="stylesheet" href="{% static 'styles/register.css'%}">
+{% endblock %}
+
+
+{% block content%}
+
+<div class="container py-5">
     
-</body>
-</html>
+</div>
+
+
+{% endblock %}
