--- a/templates/base.html
+++ b/templates/base.html
@@ -10,7 +10,9 @@
 				<link rel="stylesheet" href="{% static 'bootstrap/css/bootstrap.min.css' %}" type="text/css">
 				<link rel="stylesheet" type="text/css" href="{% static 'styles/navbar.css' %}">
 				<link rel="stylesheet" type="text/css" href="{% static 'styles/footer.css' %}">
-				<title>Hollow Customers System</title>	
+				{% block extra_styles %} 
+				{% endblock %}
+				<title>{% block title %}Hollow Customers System{% endblock %}</title>	
 		</head>
 	<body>
 			<nav class="navbar navbar-expand-lg">
@@ -45,6 +47,8 @@
 					</div>
 				</div>
 			</nav>
+			{% block content %}
+			
 			<div class="container py-4">
 				<div id="carouselExampleCaptions" class="carousel carousel-dark slide" data-bs-ride="carousel">
 					<div class="carousel-indicators">
@@ -203,6 +207,7 @@
 						© 2024 Hollow Customers System, Todos los derechos reservados.
 					</div>
 				</footer>
+				{% endblock %}
 			<script src="{% static 'bootstrap/js/bootstrap.bundle.min.js' %}"></script>
 </body>
 </html>
