se agrego los formularios de registro de usuario y login de usuario

--- a/templates/base.html
+++ b/templates/base.html
@@ -30,7 +30,7 @@
 								<a class="nav-link" href="#services">Servicios</a>
 							</li>
 							<li class="nav-item">
-								<a class="nav-link" href="{% url 'about_us' %}">Sobre nosotros</a>
+								<a class="nav-link" href="{% url 'about' %}">Sobre nosotros</a>
 							</li>
 							<li class="nav-item dropdown">
 								<a class="nav-link dropdown-toggle" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
