--- a/authentication/templates/login.html
+++ b/authentication/templates/login.html
@@ -10,11 +10,19 @@
 
 {% block content%}
 
+<h3 class="text-center lead py-5">Inicio de sesion </h3>
 <div class="container d-flex min-vh-100 justify-content-center py-5">
-    <div class="form-login">
-        <h3 class="text-center lead">Hijo</h3>
-    </div>
-    
+    <form action="{% url 'login' %}" method="POST">
+        
+        {% csrf_token %}
+        {{ form.as_p }}
+        <button class="btn btn-primary"> Ingresar </button>
+        {% for message in messages.errors %}
+            <div class="alert alert-danger">
+                {{ message }}
+            </div>
+        {% endfor %}
+    </form>
 </div>
 
 {% endblock %}
