--- a/authentication/templates/register.html
+++ b/authentication/templates/register.html
@@ -11,7 +11,25 @@
 {% block content%}
 
 <div class="container py-5">
-    
+    <form action="{% url 'register' %}" method="POST">
+        {{ form.as_p  }}
+        {% csrf_token %}
+        <button class="btn btn-primary"> Registrarse </button>
+        {% if messages %}
+                {% for message in messages %}
+                    <div class="alert alert-success">
+                        {{ message }}
+                    </div>
+                {% endfor %}
+            {% endif %}
+
+            {% if form.errors %}
+            <div class="alert alert-danger">
+                {{form.errors}}
+            </div>
+            {% endif %}
+    </form>
+   
 </div>
 
 
