--- a/authentication/templates/login.html
+++ b/authentication/templates/login.html
@@ -5,13 +5,15 @@
 {% block title%}Login{% endblock %}
 
 {% block extra_styles %}
+		<script src="{% static 'jQuery/jquery-3.7.1.min.js' %}"></script>
     <link rel="stylesheet" type="text/css" href="{% static 'styles/login.css' %}">
 {% endblock %}
+
 
 {% block content%}
 
 <div class="h-100 d-flex align-items-center justify-content-center py-5">
-	<form action="{% url 'login' %}" method="POST">
+	<form id="login-form" action="{% url 'login' %}" method="POST">
 		{% csrf_token %}
 		<div class="form-group">
 			<h3 class="lead text-center py-4 display-6">Iniciar sesión</h3>
@@ -32,24 +34,25 @@
 					</div>
 					<input class="form-control" type="password" name="password" id="password" placeholder="Contraseña">
 					<div class="d-grid gap-2"></div>
-					<a class="py-1"  href="{% url 'change_password' %}"><small>¿Olvidaste tu Contraseña?</small> </a>
+					<a class="py-1 text-decoration-none"  href="{% url 'change_password' %}"><small>¿Olvidaste tu Contraseña?</small> </a>
 				</div>
 				<div class="d-grid gap-2">
 					<button class="btn btn-primary" type="submit">Ingresar</button>
-					<a class=""  href="{% url 'register' %}"><small> ¿No eres un miembro? Registrate ya!</small></a>
+					<a class="text-decoration-none"  href="{% url 'register' %}"><small> ¿No eres un miembro? Registrate ya!</small></a>
 				</div>
 			</div>
 			<br>
-			{% if messages %}
-				{% for message in messages %}
-					<div class="alert alert-danger alert-dismissible fade show" role="alert"">
-						{{ message }}
-						<button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
-					</div>
-				{% endfor %}
-			{% endif %}
+				{% if messages %}
+					{% for message in messages %}
+						<div id="success" class="alert alert-danger alert-dismissible fade show" role="alert"">
+							{{ message }}
+							<button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
+						</div>
+					{% endfor %}
+				{% endif %}
 		</div>
 	</form>
+	<script src="{% static 'js/login_form.js' %}"></script>
 </div>
 
 {% endblock %}
