se agrego la vista de restablecer contraseña

--- a/authentication/templates/change_password.html
+++ b/authentication/templates/change_password.html
@@ -1,11 +1,15 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Cambiar contraseña</title>
-</head>
-<body>
-    
-</body>
-</html>
+{% extends "base.html" %}
+
+{% load static %}
+
+{% block title%}Reestablecer contraseña{% endblock %}
+
+{% block extra_styles %}
+	
+{% endblock %}
+
+
+{% block content%}
+
+{{ form.as_p }}
+{% endblock %}
