--- a/authentication/templates/login.html
+++ b/authentication/templates/login.html
@@ -13,7 +13,7 @@
 {% block content%}
 
 <div class="h-100 d-flex align-items-center justify-content-center py-5">
-	<form id="login-form" action="{% url 'login' %}" method="POST">
+	<form id="login-form">
 		{% csrf_token %}
 		<div class="form-group">
 			<h3 class="lead text-center py-4 display-6">Iniciar sesión</h3>
