--- a/authentication/templates/login.html
+++ b/authentication/templates/login.html
@@ -2,7 +2,7 @@
 
 {% load static %}
 
-{% block title%}Login{% endblock %}
+{% block title%}Login de sesión{% endblock %}
 
 {% block extra_styles %}
 		<script src="{% static 'jQuery/jquery-3.7.1.min.js' %}" type="text/javascript"></script>
@@ -13,7 +13,7 @@
 {% block content%}
 
 <div class="container h-100 d-flex align-items-center justify-content-center py-5">
-	<form id="login-form">
+	<form id="login-form" action="{% url 'login' %}" method="POST">
 		{% csrf_token %}
 		<div class="form-group">
 			<h3 class="lead text-center py-4 display-6">Iniciar sesión</h3>
@@ -41,18 +41,18 @@
 					<a class="text-decoration-none"  href="{% url 'register' %}"><small> ¿No eres un miembro? Registrate ya!</small></a>
 				</div>
 			</div>
-			
 		</div>
 	</form>
 	<br>
-				{% if messages %}
+			{% if messages %}
 					{% for message in messages %}
 						<div id="success" class="alert alert-danger alert-dismissible fade show" role="alert"">
 							{{ message }}
 							<button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
 						</div>
 					{% endfor %}
-				{% endif %}
+			{% endif %}
 </div>
-<script src="{% static 'js/login_form.js' %}" crossorigin="anonymous"></script>
+
+<!-- <script src="{% static 'js/login_form.js' %}" crossorigin="anonymous"></script>s -->
 {% endblock %}
