se cambio el diseño del navbar del menu principal

--- a/menu/static/styles/menu_navbar.css
+++ b/menu/static/styles/menu_navbar.css
@@ -1,4 +1,16 @@
 .navbar {
+    padding-top: 0px;
+    position: inherit;
     background-color: #5c5470;
   
+  }
+
+
+  body {
+    color: #ffffff;
+  }
+
+  * {
+    margin: 0;
+    padding: 0;
   }
