--- a/menu/templates/menu.html
+++ b/menu/templates/menu.html
@@ -9,19 +9,19 @@
 		<script src="{% static 'fontawesome_free/js/all.min.js' %}"></script>
 		<link rel="stylesheet" href="{% static 'bootstrap/css/bootstrap.min.css' %}" type="text/css">
 		<link rel="stylesheet" href="{% static 'styles/menu_navbar.css' %}" type="text/css">
-		<title>Menú</title>
+		<title>Menú principal</title>
 </head>
 <body>
 	<div class="container-fluid">
     <div class="row flex-nowrap">
         <div class="col-auto col-md-3 col-xl-2 px-sm-2 px-0 bg-dark">
             <div class="d-flex flex-column align-items-center align-items-sm-start px-3 pt-2 text-white min-vh-100">
-                <a href="/" class="d-flex align-items-center pb-3 mb-md-0 me-md-auto text-white text-decoration-none">
-                    <span class="fs-5 d-none d-sm-inline">Menu</span>
+                <a href="{% url 'menu' %}" class="d-flex align-items-center pb-3 mb-md-0 me-md-auto text-white text-decoration-none">
+                    <span class="fs-5 d-none d-sm-inline"><img src="{% static 'images/logo.png' %}" alt="logo.png" width="40">Menu</span>
                 </a>
                 <ul class="nav nav-pills flex-column mb-sm-auto mb-0 align-items-center align-items-sm-start" id="menu">
                     <li class="nav-item">
-                        <a href="#" class="nav-link align-middle px-0">
+                        <a href="{% url 'menu' %}" class="nav-link align-middle px-0">
 													<i class="fas fa-home"></i> <span class="ms-1 d-none d-sm-inline">Inicio</span>
                         </a>
                     </li>
@@ -98,12 +98,15 @@
                 </div>
             </div>
         </div>
-        <div class="col py-3">
+        <div class="col">
 					<nav class="navbar navbar-expand-lg">
-						<div class="container">
+						<div class="container-fluid">
 							<a class="navbar-brand" href="{% url 'menu' %}"><img src="{% static 'images/logo_brand.png' %}" alt="logo_brand.png" width="250" height="40"></a>
 						</div>
 					</nav>
+					<div class="container">
+						<p class="lead text-dark text-center py-4">Bienvenido {{ request.user }}</p>
+					</div>
         </div>
     </div>
 </div>
