--- a/authentication/templates/change_password.html
+++ b/authentication/templates/change_password.html
@@ -5,11 +5,27 @@
 {% block title%}Reestablecer contraseña{% endblock %}
 
 {% block extra_styles %}
-	
+    <link rel="stylesheet" href="{% static 'styles/reset_password.css'%}">
 {% endblock %}
 
 
 {% block content%}
+<div class="container py-5">
+    <form action="{% url 'change_password' %}">
+        <div class="form-group">
+            <label for="old_passwpor"> Anntigua contraseña</label>
+            {{ form.old_password }}
+        </div>
+        <div class="form-group">
+            <label class="form-label" for="new_password1"> Nueva contraseña</label>
+            {{ form.new_password1 }}
+        </div>
+        <div class="form-group">
+            <label for="new_password2"> Confirmar contraseña</label>
+            {{ form.new_password2 }}
+        </div>
+        <button class="btn btn-primary btn-outline"> Cambiar contraseña</button>
+    </form>
+</div>
 
-{{ form.as_p }}
 {% endblock %}
