se resideño el formulario de login y registro

--- a/authentication/static/styles/register.css
+++ b/authentication/static/styles/register.css
@@ -11,3 +11,16 @@ body {
     
 }
 
+
+.card {
+    border-width: 1px;
+    border-style: solid;
+    box-shadow: 5px 5px 5px 5px #393e46;
+}
+
+
+.alert {
+    display:inline-block;
+   
+ }
+
