--- a/authentication/static/styles/login.css
+++ b/authentication/static/styles/login.css
@@ -5,14 +5,10 @@ body {
 }
 
 
-.form-group {
-    background-color: #fafafa;
-    height: 500px;
-    width: 300px;
+.card {
     border-width: 1px;
-    padding-top: 40px;
     border-style: solid;
-    box-shadow: 5px 5px 5px 5px #5c5470;
+    box-shadow: 5px 5px 5px 5px #393e46;
 }
 
 
