--- a/authentication/templates/login.html
+++ b/authentication/templates/login.html
@@ -6,54 +6,46 @@
 
 {% block extra_styles %}
 		<script src="{% static 'jQuery/jquery-3.7.1.min.js' %}" type="text/javascript"></script>
-		
-		<!-- <link rel="stylesheet" href="{% static 'styles/login.css' %}"> -->
-    
+		<link rel="stylesheet" href="{% static 'styles/login.css' %}"> 
 {% endblock %}
 
 
 {% block content%}
 <form action="{% url 'login' %}" method="POST">
   {% csrf_token %}
-  <section class="vh-100 gradient-custom py-5">
+  <section class="vh-50 gradient-custom py-5">
     <div class="container py-5 h-100">
       <div class="row d-flex justify-content-center align-items-center h-100">
         <div class="col-12 col-md-8 col-lg-6 col-xl-5">
-          <div class="card bg-dark text-white" style="border-radius: 1rem;">
+          <div class="card bg-dark bg-gradient text-white" style="border-radius: 1rem;">
             <div class="card-body p-5 text-center">
-  
               <div class="mb-md-5 mt-md-4 pb-5">
-  
-                <h2 class="fw-bold mb-2 text-uppercase">Login</h2>
-                <p class="text-white-50 mb-5">Please enter your login and password!</p>
-  
+                <h2 class="fw-bold mb-2 text-uppercase"><img src="{% static 'images/logo_brand.png' %}" alt="logo_brand.png" width="250" height="40"></h2>
+                <p class="text-white-50 mb-5 py-2">Por favor, ingresa tu contraseña de ingreso!</p>
                 <div class="form-outline form-white mb-4">
-                  <input type="text" id="typeEmailX" class="form-control form-control-lg" name="username" />
-                  <label class="form-label" for="typeEmailX">Email</label>
+                  <label class="form-label" for="typeEmailX"><i class="fas fa-user"></i> Nombre de usuario</label>
+                  <input type="text" id="typeEmailX" class="form-control form-control-lg" name="username"  placeholder="Ingresa tu nombre de usuario">
                 </div>
-  
                 <div class="form-outline form-white mb-4">
-                  <input type="password" id="typePasswordX" class="form-control form-control-lg" name="password" />
-                  <label class="form-label" for="typePasswordX">Password</label>
+                  <label class="form-label" for="typePasswordX"><i class="fas fa-lock"></i> Contraseña</label>
+                  <input type="password" id="typePasswordX" class="form-control form-control-lg" name="password" placeholder="Ingresa tu contraseña">
                 </div>
-  
-                <p class="small mb-5 pb-lg-2"><a class="text-white-50" href="#!">Forgot password?</a></p>
-  
-                <button class="btn btn-outline-light btn-lg px-5" type="submit">Login</button>
-  
+                <button class="btn btn-outline-light btn-lg px-5" type="submit">Iniciar sesión</button>
                 <div class="d-flex justify-content-center text-center mt-4 pt-1">
-                  <a href="#!" class="text-white"><i class="fab fa-facebook-f fa-lg"></i></a>
-                  <a href="#!" class="text-white"><i class="fab fa-twitter fa-lg mx-4 px-2"></i></a>
-                  <a href="#!" class="text-white"><i class="fab fa-google fa-lg"></i></a>
+                  {% if messages %}
+                    {% for message in messages %}
+                    <div class="alert alert-warning alert-dismissible fade show" role="alert">
+                      <i class="fas fa-exclamation-triangle"></i> {{ message }}
+                      <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
+                    </div>
+                    {% endfor %}
+                  {% endif%}
                 </div>
-  
               </div>
-  
               <div>
-                <p class="mb-0">Don't have an account? <a href="#!" class="text-white-50 fw-bold">Sign Up</a>
+                <p class="mb-0">¿No tienes una cuenta? <a href="{% url 'register' %}" class="text-white-50 fw-bold text-decoration-none">Registrate</a>
                 </p>
               </div>
-  
             </div>
           </div>
         </div>
