--- a/templates/base.html
+++ b/templates/base.html
@@ -27,9 +27,6 @@
 								<a class="nav-link" aria-current="page" href="{% url 'home' %}">Inicio</a>
 							</li>
 							<li class="nav-item">
-								<a class="nav-link" href="#services">Servicios</a>
-							</li>
-							<li class="nav-item">
 								<a class="nav-link" href="{% url 'about' %}">Sobre nosotros</a>
 							</li>
 							<li class="nav-item dropdown">
@@ -90,6 +87,8 @@
 				</div>
 			</div>
 			<div class="container py-4" id="services">
+				<hr>
+				<h3 class="lead text-center py-3"> Servicios </h3>
 				<div class="row">
 					<div class="col-sm-6 py-3">
 						<div class="card mb-3" style="max-width: 540px;">
